[package]
name = "space-age"
version = "0.2.0"
authors = ["drmason13 <drmason13@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.derive]
package = "space-age-derive"
path = "src/derive"
version = "0.2.0"  # Same as main version

[workspace]
members = ["src/derive"]
